# spBot

./: .gitignore  Cargo.toml  README.md  dockerfile
.github/workflows/: docker-image.yml  rust.yml
config/: .env
src/: main.rs
src/commands/: help.rs  meta.rs  mod.rs  rfact.rs
