[package]
name = "spbot"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Q-Sharp/spBot/"

[dependencies]
serenity = "0.10"
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
reqwest = "0.*"
serde = "1.*"
rand = "0.8.*"
simple-logging = "2.0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
